# quez

./: .coverage  .hgignore  .hgtags  README.md  pyproject.toml
quez/: __init__.py  base.py  compressors.py  deques.py  queues.py
scripts/: bench.py  code-format.ps1  code-format.sh  lint-check-and-fix.sh  runtest.ps1  runtest.sh
tests/: test_async_deque.py  test_async_queue.py  test_compressors.py  test_optional_compressors.py  test_sync_deque.py  test_sync_queue.py
