[project]
name = "quez"
version = "1.1.3"
description = "Pluggable, compressed in-memory queues for both sync and asyncio applications."
authors = [
    {name = "Chaiwat Suttipongsakul",email = "cwt@bashell.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []

[project.optional-dependencies]
zstd = ["zstandard"]
lzo = ["python-lzo"]
all = ["zstandard", "python-lzo"]

[tool.poetry]
homepage = "https://sr.ht/~cwt/quez/"
repository = "https://hg.sr.ht/~cwt/quez"

[tool.poetry.urls]
"GitHub Mirror" = "https://github.com/cwt/quez"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^26.3.0"
ruff = "^0.15.0"
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
# Add the optional dependencies for testing
zstandard = {version = "*", optional = true}
python-lzo = {version = "*", optional = true}

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
